# slm

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LEQ_Grading_Practice.docx  README.md  brainlift.md  eval-suites.md  plan.txt  pyproject.toml  review.md  spec.md  v5_plan.md
artifacts/: dataset_card.md  model_card.md
config/: college_board_permission.example.json
docs/: behavior_spec.md  brainlift.md  college-board-data-source-research.md  data_permission_checkpoint.md  error_analysis.md  eval_report.md  litmus_test.md  submission_checklist.md  v1_eval_results.md  v1_run_report_2026-07-09.md  v2_failure_analysis_for_v3.md  v4_run_report_2026-07-11.md  v5_authentic_essay_regeneration_plan.md  v5_demo_storyboard.md  v5_external_data_contract.md  v5_final_runbook.md  v5_manual_review_ready.md  v5_pilot_review_ready.md  v5_run_report.md
notebooks/: colab_train_eval_v1.ipynb  colab_train_eval_v3.ipynb  colab_train_v4.ipynb  colab_train_v5.ipynb
scripts/: analyze_v2_for_v3.py  assemble_realistic_dataset.py  assemble_v4_dataset.py  assemble_v5_dataset.py  audit_apc_sources.py  audit_synthetic_candidates.py  audit_v3_tokens.py  benchmark_v3_dev.py  build_golden_v2.py  build_leq_practice_litmus.py  build_mixed_dataset.py  build_prompt_catalog.py  build_v2_artifacts.py  build_v3_dataset.py  build_v4_seed_profiles.py  build_v5_adapted_prompts.py  build_v5_fact_cards.py  build_v5_public_companion.py  catalog_ap_sources.py  catalog_quizlet_sources.py  catalog_tomrichey_sources.py  check_v5_release.py  check_v5_writer_batch.py  compare_leq_practice.py  compose_v4_essays.py  (+47 more)
(+879 files in other folders)
