[project]
name = "apush-frq-grader-slm"
version = "0.1.0"
description = "Data, evaluation, and training pipeline for an APUSH LEQ grader SLM with structured JSON output."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.20.0",
    "jinja2>=3.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
train = [
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0",
    "peft>=0.12.0",
    "trl>=0.9.0",
    "transformers>=4.43.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.7.0",
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
]
judge = [
    "openai>=1.40.0",
]
ingest = [
    "pdfplumber>=0.11.0",
    "openai>=1.40.0",
]

[project.scripts]
apush-grader-generate = "apush_frq_grader_slm.cli.generate_dataset:app"
apush-grader-eval = "apush_frq_grader_slm.cli.run_eval:app"
apush-grader-demo = "apush_frq_grader_slm.cli.demo:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
